--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/youth-design/codewars_kata_solutions#readme",
   "devDependencies": {
-    "jest": "26.4.2"
+    "jest": "26.4.2",
+    "@jest/globals": "^26.6.2"
   }
 }
