--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/youth-design/codewars_kata_solutions#readme",
   "devDependencies": {
     "jest": "26.4.2",
-    "@jest/globals": "^26.6.2"
+    "@jest/globals": "^26.6.2",
+    "@codewars/test-compat": "^1.1.0",
+    "chai": "^4.3.4"
   }
 }
