--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/youth-design/codewars_kata_solutions#readme",
   "devDependencies": {
-    "jest": "26.4.2",
-    "@jest/globals": "^26.6.2",
     "@codewars/test-compat": "^1.1.0",
-    "chai": "^4.3.4"
+    "@jest/globals": "^26.6.2",
+    "chai": "^4.3.4",
+    "jest": "26.4.2"
   }
 }
